# m2x-haskell-client

./: README.md  m2x-client.cabal  stack.yaml
app/: Main.hs
src/M2X/: Client.hs  Device.hs  DeviceAPI.hs  DeviceTypes.hs  Time.hs  Types.hs
test/M2X/: DeviceAPISpec.hs  DeviceSpec.hs
