name:                m2x-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/m2x-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Lorenzo Lopez-Sancho Abraham
category:            IoT
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , hexstring
                     , datetime
                     , wreq
                     , url
                     , iproute
                     , aeson
                     , lens
                     , servant
                     , servant-client
                     , http-client
                     , http-client-tls
                     , time
                     , either
  exposed-modules:     M2X.Device
                     , M2X.Types
                     , M2X.Time
                     , M2X.Client
                     , Data.String.Strip

executable m2x-client
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hexstring
                     , datetime
                     , wreq
                     , url
                     , iproute
                     , aeson
                     , lens
                     , m2x-client
                     , http-client
                     , http-client-tls
                     , servant-client

test-suite m2x-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , m2x-client
                     , hspec
                     , QuickCheck
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
